
* GITHUB#14130: Upgrade OpenNLP from 2.3.2 to 2.5.3, which transitively upgrades Slf4j
  from 1.7.36 to 2.0.16. (Michael Froh)

* GITHUB#14223 : Fixed a flaky test TestKnnFloatVectorQuery.testFindFewer (Navneet Verma)

* GITHUB#14372: Reduce visibility of NRTSuggester#load from public to package private (Luca Cavanna)

* GITHUB#14386: Bump analysis/icu's icu4j dependency to 77.1 (Robert Muir)

======================= Lucene 10.1.0 =======================

API Changes
---------------------

* GITHUB#13859: Allow open-ended ranges in Intervals range queries. (Mayya Sharipova)

* GITHUB#13950: Make BooleanQuery#getClauses public and add #add(Collection<BooleanClause>) to BQ builder. (Shubham Chaudhary)

* GITHUB#13957: Removed LeafSimScorer class, to save its overhead. Scorers now
  compute scores directly from a SimScorer, postings and norms. (Adrien Grand)

* GITHUB#13998: Add IndexInput::isLoaded to determine if the contents of an
  input is resident in physical memory. (Chris Hegarty)

New Features
---------------------
* GITHUB#14034: Add support for storing term vectors in FeatureField. (Jim Ferenczi)

Improvements
---------------------

* GITHUB#13986: Allow easier configuration of the Panama Vectorization provider with
  newer Java versions. Set the `org.apache.lucene.vectorization.upperJavaFeatureVersion`
  system property to increase the set of Java versions that Panama Vectorization will
  provide optimized implementations for. (Chris Hegarty)

* GITHUB#266: TieredMergePolicy now allows merging up to maxMergeAtOnce
  segments for merges below the floor segment size, even if maxMergeAtOnce is
  bigger than segsPerTier. (Adrien Grand)

* GITHUB#14033: Combine all postings enum impls of the default codec into a
  single class. (Adrien Grand)

Optimizations
---------------------

* GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)

* GITHUB#13800: MaxScoreBulkScorer now recomputes scorer partitions when the